--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,5 +40,6 @@ subjects:
 - !lcc 'PR'
 - !lcsh 'Great Britain -- Kings and rulers -- Drama'
 - !lcsh 'Henry, VIII, King of England, 1491-1547 -- Drama'
+- GITenberg
 title: Kuningas Henrik Kahdeksas
 url: http://www.gutenberg.org/ebooks/42873
